--- a/pagina huawei/css/styles.css
+++ b/pagina huawei/css/styles.css
@@ -108,6 +108,11 @@ h6, .h6,  .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   font-weight: 400;
   line-height: 1.2;
 }
+h3.nosotros{
+  color: black;
+  text-align: center;
+}
+
 h5{
 font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
@@ -3937,6 +3942,7 @@ textarea.form-control-lg {
 
 .nav {
   display: flex;
+  position: absolute;
   flex-wrap: wrap;
   padding-left: 0;
   margin-bottom: 0;
