--- a/pagina huawei/css/styles.css
+++ b/pagina huawei/css/styles.css
@@ -102,6 +102,7 @@ hr:not([size]) {
 }
 
 h6, .h6,  .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
+  color: white;
   margin-top: 0;
   margin-bottom: 0.5rem;
  font-family: 'Caveat', cursive;
@@ -112,6 +113,26 @@ h3.nosotros{
   color: black;
   text-align: center;
 }
+p.info{
+  font-family: 'Zen Loop', cursive;
+  color: white;
+  font-weight: 500;
+  text-align: center;
+}
+li{
+  font-family: 'Zen Loop', cursive;
+  color: white;
+  font-weight: 500;
+  
+}
+div.info1{
+  
+  
+  margin: 0rem 12rem;
+ 
+
+}
+
 
 h5{
 font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -144,7 +165,7 @@ h3, .h3 {
 }
 
 h4, .h4 {
-  font-size: calc(1.275rem + 0.3vw);
+  font-size: calc(1rem + 0.3vw);
 }
 @media (min-width: 1200px) {
   h4, .h4 {
@@ -608,7 +629,7 @@ progress {
 
 .img-fluid {
   max-width: 100%;
-  height: auto;
+  height: 300px;
 }
 
 .img-thumbnail {
@@ -1124,22 +1145,22 @@ progress {
 
   .row-cols-md-1 > * {
     flex: 0 0 auto;
-    width: 100%;
+    width: 10%;
   }
 
   .row-cols-md-2 > * {
     flex: 0 0 auto;
-    width: 50%;
+    width: 5%;
   }
 
   .row-cols-md-3 > * {
     flex: 0 0 auto;
-    width: 33.3333333333%;
+    width: 25%;
   }
 
   .row-cols-md-4 > * {
     flex: 0 0 auto;
-    width: 25%;
+    
   }
 
   .row-cols-md-5 > * {
@@ -1169,7 +1190,7 @@ progress {
 
   .col-md-3 {
     flex: 0 0 auto;
-    width: 25%;
+    width: 5%;
   }
 
   .col-md-4 {
@@ -1184,7 +1205,7 @@ progress {
 
   .col-md-6 {
     flex: 0 0 auto;
-    width: 50%;
+    width: 5%;
   }
 
   .col-md-7 {
@@ -1565,7 +1586,7 @@ progress {
 
   .row-cols-xl-4 > * {
     flex: 0 0 auto;
-    width: 25%;
+    width: ;
   }
 
   .row-cols-xl-5 > * {
@@ -7653,9 +7674,6 @@ textarea.form-control-lg {
   font-weight: 700 !important;
 }
 
-.fw-bolder {
-  font-weight: bolder !important;
-}
 
 .lh-1 {
   line-height: 1 !important;
@@ -11428,7 +11446,40 @@ header.masthead h1, header.masthead .h1 {
     font-size: 5.5rem;
   }
 }
-
+/*  
+información
+*/
+header.masthead2 {
+  padding-top: 12rem;
+  padding-bottom: calc(12rem - 4.5rem);
+  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/manguera.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+}
+header.masthead2 h1, header.masthead2 .h1 {
+  font-size: 2.25rem;
+}
+@media (min-width: 992px) {
+  header.masthead2 {
+    height: 100vh;
+    min-height: 40rem;
+    padding-top: 0rem;
+    padding-bottom: 0;
+  }
+  header.masthead2 p {
+    font-size: 1.15rem;
+  }
+  header.masthead2 h1, header.masthead2 .h1 {
+    font-size: 3rem;
+  }
+}
+@media (min-width: 1200px) {
+  header.masthead2 h1, header.masthead2 .h1 {
+    font-size: 3.2rem;
+  }
+}
 #portfolio .container-fluid, #portfolio .container-sm, #portfolio .container-md, #portfolio .container-lg, #portfolio .container-xl, #portfolio .container-xxl {
   max-width: 1920px;
 }
@@ -11533,4 +11584,13 @@ svg circle {
 
 .icon:hover circle {
     stroke-dasharray: 220;
+}
+img.img-fluidd{
+  width: 80px;
+  height: 80px;
+  color: transparent;
+  opacity: 50%;
+}
+  
+
 }
